fix(select): add outline and high contrast mode support

--- a/packages/components/src/select/Select.module.css
+++ b/packages/components/src/select/Select.module.css
@@ -263,6 +263,11 @@
     color: gray50;
     background-color: gray10;
   }
+
+  &:focus-visible {
+    outline-offset: 2px;
+    outline: 2px solid black;
+  }
 }
 
 .selectDivider {
@@ -339,7 +344,7 @@
   .selectValueTag {
     border: ButtonBorder solid;
   }
-  .button {
+  .button, .clearButton {
     border: Highlight 1px solid;
   }
   .fieldError {
